<resources>
    <string name="app_name">Librapp</string>
    <string name="app_name_instant">Powered by Librapp Instant</string>
    <string name="app_desc">Personal library for your favorite apps</string>
    <string name="action_signout">Sign out</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_sort_by_last_added">Sort by last added</string>
    <string name="action_sort_by_name">Sort by name</string>
    <string name="action_sort_by_category">Sort by category</string>
    <string name="content_description_empty">Nothing</string>

    <string name="save_button">Save</string>
    <string name="url_info">Play Store URL</string>
    <string name="category_info">Category</string>
    <string name="url_desc_info">Description (by choice)</string>
    <string name="url_error">You should write the url correctly</string>
    <string name="category_error">Please,select category</string>


    <string name="settings_about">About</string>
    <string name="settings_app_version">Application version: </string>
    <string name="settings_github">Source code: </string>
    <string name="settings_github_link">github.com/azadjs/Librapp</string>
    <string name="settings_thanks">Special thanks to -</string>
    <string name="settings_rate_us">RATE US</string>
    <string name="settings_instructions">Instructions</string>
    <string name="settings_tap_appbar">Tap Librapp    -    to scroll up</string>
    <string name="settings_tap_item">Tap app    -    to go to the Play Store</string>
    <string name="settings_tap_item_long">Long tap    -    to share the app</string>
    <string name="settings_tap_delete">Tap delete icon    -    to delete app from list</string>
    <string name="settings_tap_delete_long">Long tap delete icon    -    to delete all apps</string>

    <string name="privacy_policy">
        <a href="https://drive.google.com/open?id=17VOi0Ej4_0AmSSCUACK7G1ZrKCXpHPA0">Privacy Policy</a>
    </string>
    <string name="terms_and_conditions">
        <a href="https://drive.google.com/open?id=1CoIaXHYjR7wz6Zpue2rUYc2-UFPPA3Eq">Terms and Conditions</a>
    </string>
    <string name="settings_special_thanks">
        <a href="https://www.instagram.com/ok__die/">@ok__die</a>
    </string>
</resources>
