<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#616161">

    <LinearLayout
        android:background="@drawable/bg_bottom_sheet_dialog_fragment"
        android:backgroundTint="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="15sp">
        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp">

        </Spinner>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12sp"
            android:hint="@string/url_info"
            android:textColorHint="@color/appColor"
            app:boxStrokeColor="@color/appColor"
            app:errorTextAppearance="@string/url_error"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/app_url"
                android:inputType="textUri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12sp"
            android:hint="@string/url_desc_info"
            android:textColorHint="@color/appColor"
            app:boxStrokeColor="@color/appColor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/app_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="@string/save_button"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            app:cornerRadius="10sp"
            app:backgroundTint="@color/appColor" />
    </LinearLayout>

</LinearLayout>