<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    tools:context=".InstantAddActivity">

        <LinearLayout
            android:backgroundTint="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp"
            android:paddingTop="5sp"
            android:paddingRight="10sp"
            android:paddingBottom="15sp">

            <Spinner
                android:id="@+id/spinner_category_instant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:paddingBottom="20sp"
                android:backgroundTint="@color/appColor"
                android:spinnerMode="dropdown">
            </Spinner>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/app_url_layout_instant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/url_info"
                android:textColorHint="@color/appColor"
                app:boxStrokeColor="@color/appColor"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/app_url_instant"
                    android:inputType="textUri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:hint="@string/url_desc_info"
                android:textColorHint="@color/appColor"
                app:boxStrokeColor="@color/appColor"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/app_desc_instant"
                    android:maxLength="40"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="5sp"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/ic_logo"
                    android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="5sp"
                android:gravity="center_vertical"
                android:textStyle="italic"
                android:textSize="16sp"
                android:text="@string/app_name_instant"/>

            <Button
                android:id="@+id/save_button_instant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="end"
                app:backgroundTint="@color/appColor" />
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>